--- a/src/main/webapp/resources/css/form.css
+++ b/src/main/webapp/resources/css/form.css
@@ -1,4 +1,3 @@
-/* landing.css */
 html, body {
     margin: 0;
     padding: 0;
@@ -18,7 +17,7 @@ html, body {
 .container {
     border: 3px solid;
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
@@ -54,5 +53,20 @@ html, body {
     border: 2px solid #FFFFFF;
     border-style: none;
     border-bottom-style: dashed;
-    width: 35%;
+    width: 95%;
+}
+
+.rounded-textbox{
+    padding-left: 7px;
+    outline: none;
+    border: 2px solid #FFFFFF;
+    border-radius: 5px;
+    width: 95%;
+    color: #FFFFFF;
+    background-color: #000000;
+    resize: none;
+    padding: 10px;
+    font-size: 1rem;
+    max-height: 300px;
+    overflow-y: auto;
 }
